--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=logistic
+spring.datasource.url=jdbc:postgresql://localhost:5432/swiftship_db
+spring.datasource.username=swiftship
+spring.datasource.password=swiftship_admin_123
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
