set up jwt, completed signup and login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,9 @@ spring.application.name=logistic
 spring.datasource.url=jdbc:postgresql://localhost:5432/swiftship_db
 spring.datasource.username=swiftship
 spring.datasource.password=swiftship_admin_123
+spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
+jwt.secret=thisisjohncenaRkSjVq3w8x/A?D(G+KbPeShVmYp3s6v9y$B&E)H@McQfTjWnZr4u7w!z%C*F-JaNdRgUkXp2s5v8
+jwt.expiration=86400000
