--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - db
     networks:
       - app-network
+    volumes:
+      - .:/app
   db:
     image: postgres:latest
     container_name: swiftShip-db
